<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:inputType="textNoSuggestions"
    android:background="@drawable/signupbakgrd">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="235dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.041"
        app:srcCompat="@drawable/app_title" />

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="264dp"
        android:layout_above="@+id/registerbtn"
        android:layout_below="@+id/imageView2"
        android:layout_centerHorizontal="true"
        android:background="@drawable/textcontentstyle">


        <EditText
            android:id="@+id/userid"
            android:layout_width="335dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="none|textPersonName"
            android:lineSpacingExtra="30sp"
            android:textColor="@color/colorwhite"
            app:layout_constraintBottom_toTopOf="@+id/pswid"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/pswid"
            android:layout_width="335dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:lineSpacingExtra="30sp"
            android:textColor="@color/colorwhite"
            app:layout_constraintBottom_toTopOf="@+id/email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userid" />

        <EditText
            android:id="@+id/email"
            android:layout_width="335dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textAllCaps="false"
            android:textColor="@color/colorwhite"
            app:layout_constraintBottom_toTopOf="@+id/address"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pswid" />

        <EditText
            android:id="@+id/address"
            android:layout_width="335dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/address"
            android:inputType="textPostalAddress"
            android:textColor="@color/colorwhite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email" />
    </android.support.constraint.ConstraintLayout>

    <Button
        android:id="@+id/registerbtn"
        android:layout_width="452dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/returntxt"
        android:layout_alignParentStart="true"
        android:background="@color/colorPrimary"
        android:backgroundTintMode="add"
        android:text="@string/register"
        android:textColor="@color/colorwhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_alignParentLeft="true" />

    <TextView
        android:id="@+id/returntxt"
        android:layout_width="wrap_content"
        android:layout_height="33dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        android:onClick="onsigninclick"
        android:text="@string/return_login"
        android:textColor="@color/colorwhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</RelativeLayout>
