<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativelayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    android:maxWidth="500dp"
    android:inputType="textNoSuggestions"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/aboutxtlink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/textView"
        android:onClick="onaboutpageclick"
        android:text="@string/aboutpage"
        android:textColor="@color/colorwhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.56"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        app:layout_constraintBottom_toTopOf="@+id/ConstraintLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.545"
        app:srcCompat="@drawable/app_title" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="12dp"
        android:text="Group 2 COP4331 2018"
        android:textColor="@color/colorwhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.178"
        app:layout_constraintStart_toStartOf="parent" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/ConstraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="401dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="36dp"
        android:background="@color/colorveryopaquewhite"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/loginname"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="340dp"
            android:layout_height="53dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:textColor="@color/colorwhite"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/loginpsw"
            android:layout_width="340dp"
            android:layout_height="53dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/colorwhite"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginname" />

        <Button
            android:id="@+id/signinbtn"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/loginname"
            android:layout_alignStart="@+id/loginname"
            android:layout_alignTop="@+id/signupbtn"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:background="@color/colororange"
            android:text="@string/sign_in"
            android:textColor="@color/colorwhite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/signupbtn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.8" />

        <Button
            android:id="@+id/signupbtn"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/guestbtn"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:layout_toLeftOf="@+id/guestbtn"
            android:layout_toStartOf="@+id/guestbtn"
            android:background="@color/colororange"
            android:onClick="onsignupclick"
            android:text="@string/sign_up"
            android:textColor="@color/colorwhite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guestbtn"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/signinbtn"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.8" />

        <Button
            android:id="@+id/guestbtn"
            android:layout_width="80dp"
            android:layout_height="wrap_content"

            android:layout_alignEnd="@+id/loginname"
            android:layout_alignParentBottom="true"
            android:layout_alignRight="@+id/loginname"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="8dp"
            android:background="@color/colordarkblue"
            android:onClick="onguestpageclick"
            android:text="@string/guest"
            android:textColor="@color/colorwhite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/signupbtn"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.8" />

    </android.support.constraint.ConstraintLayout>


</RelativeLayout>